cambie mi pagina con lorem

--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam assumenda ab natus consectetur soluta nobis consequatur voluptate quis deleniti voluptatibus! Fugit, dolorem minima cupiditate vero atque illo deserunt a ea.</h1>
 </body>
 </html>
